@@ -3,6 +3,8 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 exec_prefix_set=no
+includedir=@includedir@
+includedir=@libdir@
 
 usage="\
 Usage: libart-config [--prefix[=DIR]] [--exec-prefix[=DIR]] [--version] [--libs] [--cflags]"
@@ -39,14 +41,10 @@ while test $# -gt 0; do
       echo @LIBART_VERSION@
       ;;
     --cflags)
-      if test @includedir@ != /usr/include ; then
-        includes=-I@includedir@
-      fi
-      echo $includes
+      echo @LIBART_INCLUDEDIR@
       ;;
     --libs)
-      libdirs=-L@libdir@
-      echo $libdirs -lart_lgpl -lm
+      echo @LIBART_LIBDIR@ @LIBART_LIBS@
       ;;
     *)
       echo "${usage}" 1>&2
